Fix some layout bugs, add a bit of space, and post blog deploy article

--- a/src/css/mobile.css
+++ b/src/css/mobile.css
@@ -1,5 +1,6 @@
 .columns {
   display: flex;
+  justify-content: space-between;
 }
 @media all and (max-width: 700px) {
   .columns {
